fix: Home/JoinBMSection volunteer section image align

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -136,6 +136,7 @@ p {
   }
 }
 
+/* Join Breathe Mongolia styles start */
 
 .join-bm-slider-wrapper {
   background: #fafaff;
@@ -318,6 +319,8 @@ p {
     img {
       width: 20px;
       height: 20px;
+      margin-left: auto;
+      margin-right: auto;
     }
   }
 }
@@ -386,6 +389,8 @@ p {
       }
     }
   }
+
+  /* Join Breathe Mongolia styles end */
 
   // Our-Partners Section custom styles
   .partner-logos-slider-wrapper {
